# LaborDjinni

./: .gitignore  .gitmodules  CMakeLists.txt  run_djinni.sh
android/Greeter/app/: CMakeLists.txt  build.gradle
android/Greeter/app/src/androidTest/java/com/hsfl/greeter/: ExampleInstrumentedTest.java
android/Greeter/app/src/main/: AndroidManifest.xml
android/Greeter/app/src/main/cpp/: GreeterImpl.cpp  GreeterImpl.h  native-lib.cpp
android/Greeter/app/src/main/cpp/djinni/: greeter.hpp
android/Greeter/app/src/main/cpp/djinni/jni/: NativeGreeter.cpp  NativeGreeter.hpp
android/Greeter/app/src/main/java/com/hsfl/greeter/: MainActivity.java
android/Greeter/app/src/main/java/com/hsfl/greeter/djinni/: Greeter.java
android/Greeter/app/src/main/res/layout/: activity_main.xml
android/Greeter/app/src/test/java/com/hsfl/greeter/: ExampleUnitTest.java
djinni/: greeter.djinni
ios/objc/: HSFLGreeter+Private.h  HSFLGreeter+Private.mm  HSFLGreeter.h
